Fix embed overflow out of iframe

--- a/mon-pix/app/styles/components/_challenge-embed-simulator.scss
+++ b/mon-pix/app/styles/components/_challenge-embed-simulator.scss
@@ -62,6 +62,7 @@
 
 .embed__simulator {
   height: 100%;
+  overflow: auto;
 
   &.blurred {
     filter: blur(5px);
